# vscode-cmake-highlight

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json
syntaxes/: CMake.tmLanguage
tests/: CMakeLists.txt
